--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
+@import url("https://fonts.googleapis.com/css2?family=Kanit&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  font-family: "Kanit", sans-serif;
+  background-image: url("https://img1.goodfon.com/wallpaper/nbig/7/10/foto-raznoe-verevki-lampochki.jpg");
+}
+.item-img {
+  height: 100px;
+  width: 100px;
+}
+.container {
+  width: 350px;
+  text-align: center;
+}
+.btn {
+  background-color: #4d4845;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+  display: flex;
+  padding: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.single-item {
+  display: flex;
+  margin: 10px 0px;
+  box-shadow: 2px 2px 2px #888888;
+  background: linear-gradient(
+    to right,
+    rgba(255, 122, 89, 1),
+    rgba(255, 122, 89, 0)
+  );
+}
+.card-body {
+  align-items: center;
+  margin-left: 20px;
+  display: flex;
+  width: 250px;
+  justify-content: space-between;
+}
+.gg-trash-empty {
+  margin-left: 20px;
+}
+.all-items {
+  margin: 10px 0px;
+}
+.btn-hlder {
+  padding: 10px 0px;
+  display: flex;
+  justify-content: center;
+}
+.title {
+  font-size: 45px;
+  font-weight: bold;
+  color: white;
 }
